--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           a travéz de mis actos de amor y cariño.
         </h3>
         <div style="text-align: center;">
-          <a href="/carta/carta.html" class="custom-button">Aquí te dejo una cartita Dudu</a>
+          <a href="https://jvilchis11.github.io/flores-para-dudu/" class="custom-button">Aquí te dejo una cartita Dudu</a>
           <a href="/flor/flores.html" class="custom-button">y por aquí unas florecitas</a>
       </div>
         <h3>
