correccion del enlace de las flores2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </h3>
         <div style="text-align: center;">
           <a href="https://jvilchis11.github.io/flores-para-dudu/" class="custom-button">Aquí te dejo una cartita Dudu</a>
-          <a href="/flor/flores.html" class="custom-button">y por aquí unas florecitas</a>
+          <a href="https://jvilchis11.github.io/flores-para-dudu/" class="custom-button">y por aquí unas florecitas</a>
       </div>
         <h3>
           - att. Bubu
